[package]
name = "daily_tookay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
ethers = "2.0.14"
ethnum = "1.5.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.202", features = ["derive"] }
sha3 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
